added exception handling in MoveStudentPhase class and adjusted relative tests